--- a/web-app/css/jssh.css
+++ b/web-app/css/jssh.css
@@ -29,9 +29,10 @@
   	padding: 12px 12px 12px 12px;
    font-weight: bold;
 }
-
-.logconsole { 
-	border: 3px groove #ccc;
+.logconsole-lg {
+	 width: 95%;
+    height: 500px;
+    border: 3px groove #ccc;
   	color: #FFF; 
   	background: #000;
   	white-space: pre;
@@ -39,8 +40,7 @@
   	border-width: thin;
   	border-color: black;
   	font-size: 1em;
-    width: 95%;
-    height: 500px;
+   
   	font-family: monospace;
   	display: inline-block;
   	*display:inline;
@@ -50,7 +50,31 @@
   	padding: 12px 12px 12px 12px;
   	overflow:auto;
 	resize:both;
+   
 }	
+.logconsole-sm {
+	 width: 95%;
+    height: 200px;
+    border: 3px groove #ccc;
+  	color: #FFF; 
+  	background: #000;
+  	white-space: pre;
+  	border-style: solid;
+  	border-width: thin;
+  	border-color: black;
+  	font-size: 1em;
+   
+  	font-family: monospace;
+  	display: inline-block;
+  	*display:inline;
+  	*zoom:1;
+  	position: relative;
+  	margin: 6px 6px 6px 6px;
+  	padding: 12px 12px 12px 12px;
+  	overflow:auto;
+	resize:both;
+}
+
 div[class*="tbutton"] {
 	border: 1px solid rgba(0,0,0,0.2);
 	box-sizing: content-box !important;
