--- a/grails-app/assets/stylesheets/jssh.css
+++ b/grails-app/assets/stylesheets/jssh.css
@@ -72,6 +72,7 @@
   	overflow:auto;
 	resize:both;
 }
+
 div[class*="tbutton"] {
 	border: 1px solid rgba(0,0,0,0.2);
 	box-sizing: content-box !important;
@@ -111,7 +112,18 @@ div[class*="tbutton"] {
 	color: #000;
 }
 .page-header{padding-bottom:9px;margin:20px 0 30px;border-bottom:1px solid #eeeeee;}
-
+.page-header2{
+	padding-bottom: 1em;
+	margin:1em 0 0;
+	background: #CCC; 
+	width: auto;
+	display: inline-block;
+	*zoom: 1;
+	*display: inline;
+}
+.fixer {
+    padding: 1px;
+}
 #contact-area input, #contact-area textarea {
 	padding: 5px;
 	width: 40em;
@@ -121,9 +133,11 @@ div[class*="tbutton"] {
 }
 
 #contact-area textarea {
-	height: 3em;
+	height: 2em;
 }
-
+#contact-area .sender {
+	margin-top: -30px;
+}
 #contact-area textarea:focus, #contact-area input:focus {
 	border: 2px solid #900;
 }
